Add Odd or Even

--- a/python.html
+++ b/python.html
@@ -56,6 +56,16 @@
               <p>Create your own To-Do-List</p>
             </td>
           </tr>
+          <tr id="3-odd-or-even">
+            <td>
+              <img class="example-image" src="pictures/python/03-odd-or-even.jpg">
+            </td>
+            <td>
+              <a href="python/03-odd-or-even.html"><h3>Odd or Even</h3></a>
+              <p class="level">Beginner</p>
+              <p>Is it odd or even?</p>
+            </td>
+          </tr>
         </table>
       </div>
     </main>
