--- a/python/02-todolist.html
+++ b/python/02-todolist.html
@@ -31,7 +31,7 @@
       <h1>To-Do-List</h1>
       <p>Create your own To-Do-List</p>
       <p class="level">Beginner</p>
-      <p>The script asks you for your name and your birthday. Then you get a sentence about you.</p>
+      <p>You can choose between A (Create Task) and B (Check Task). With input you can add tasks. For checking a task you have to know it's number on the list.</p>
       <div class="code-1">
         <code>
           Welcome to your To-Do-List<br>
