--- a/python/03-odd-or-even.html
+++ b/python/03-odd-or-even.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World - devExamples</title>
+    <title>Odd or Even - devExamples</title>
     <meta charset="utf-8">
 
     <link href="../style.css" rel="stylesheet" type="text/css">
