--- a/python.html
+++ b/python.html
@@ -66,6 +66,16 @@
               <p>Is it odd or even?</p>
             </td>
           </tr>
+          <tr id="4-rock-paper-scissors">
+            <td>
+              <img class="example-image" src="pictures/python/04-rock-paper-scissors.jpg">
+            </td>
+            <td>
+              <a href="python/04-rock-paper-scissors.html"><h3>Rock-Paper-Scissors</h3></a>
+              <p class="level">Beginner</p>
+              <p>Create your own game</p>
+            </td>
+          </tr>
         </table>
       </div>
     </main>
