Add Random Number

--- a/python.html
+++ b/python.html
@@ -37,7 +37,7 @@
       <h2>Examples</h2>
       <div class="examples">
         <table>
-          <tr id="1-welcome">
+          <tr id="01-welcome">
             <td>
               <img class="example-image" src="pictures/python/01-hello-world.jpg">
             </td>
@@ -46,7 +46,7 @@
               <p class="level">Beginner</p>
               <p>A little script with input and output</p>
           </tr>
-          <tr id="2-todolist">
+          <tr id="02-todolist">
             <td>
               <img class="example-image" src="pictures/python/02-todolist.jpg">
             </td>
@@ -56,7 +56,7 @@
               <p>Create your own To-Do-List</p>
             </td>
           </tr>
-          <tr id="3-odd-or-even">
+          <tr id="03-odd-or-even">
             <td>
               <img class="example-image" src="pictures/python/03-odd-or-even.jpg">
             </td>
@@ -66,7 +66,7 @@
               <p>Is it odd or even?</p>
             </td>
           </tr>
-          <tr id="4-rock-paper-scissors">
+          <tr id="04-rock-paper-scissors">
             <td>
               <img class="example-image" src="pictures/python/04-rock-paper-scissors.jpg">
             </td>
@@ -74,6 +74,16 @@
               <a href="python/04-rock-paper-scissors.html"><h3>Rock-Paper-Scissors</h3></a>
               <p class="level">Beginner</p>
               <p>Create your own game</p>
+            </td>
+          </tr>
+          <tr id="05-random-number">
+            <td>
+              <img class="example-image" src="pictures/python/05-random-number.jpg">
+            </td>
+            <td>
+              <a href="python/05-random-number.html"><h3>Random Number</h3></a>
+              <p class="level">Beginner</p>
+              <p>I've chosen a number from 1 to 100</p>
             </td>
           </tr>
         </table>
