Add meta description

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>devExamples</title>
+    <meta name="description" content="devExamples.cf is a website with coding examples. For every project there is an instruction and some example code.">
     <meta charset="utf-8">
 
     <link href="style.css" rel="stylesheet" type="text/css">
