Add course name

--- a/python/01-hello-world.html
+++ b/python/01-hello-world.html
@@ -28,6 +28,7 @@
     <div id="nav"></div>
 
     <main>
+      <h4><a href="http://devExamples.cf/python.html">Python</a></h4>
       <h1>Hello World</h1>
       <p>A little script with input and output</p>
       <p class="level">Beginner</p>
