--- a/python/04-rock-paper-scissors.html
+++ b/python/04-rock-paper-scissors.html
@@ -28,6 +28,7 @@
     <div id="nav"></div>
 
     <main>
+      <h4><a href="http://devExamples.cf/python.html">Python</a></h4>
       <h1>Rock-Paper-Scissors</h1>
       <p>Create </p>
       <p class="level">Beginner</p>
