--- a/python/03-odd-or-even.html
+++ b/python/03-odd-or-even.html
@@ -45,19 +45,19 @@
       <button name="still beta" class="view-solution">Solution</button>
 
       <div class="code-2">
-        <code>
-          <span class="gray">#!/usr/bin/python3</span><br>
-          <span class="gray"># 03-odd-or-even.py</span><br>
-          <br>
-          <span class="orange">while True</span>:<br>
-            ...number_input = <span class="purple">int</span>(<span class="purple">input</span>(<span  class="green">"Enter a number: "</span>))<br>
-            ...number = number_input % <span class="blue">2</span><br>
-          <br>
-            ...<span class="orange">if</span> number == <span class="blue">0</span>:<br>
-              ......<span class="purple">print</span>(<span class="green">"You have entered an even number!"</span>)<br>
-            ...<span class="orange">else</span>:<br>
-              ......<span class="purple">print</span>(<span class="green">"You habe entered an odd number!"</span>)
-        </code>
+        <code><pre>
+<span class="gray">#!/usr/bin/python3</span>
+<span class="gray"># 03-odd-or-even.py</span>
+
+<span class="orange">while True</span>:<br>
+    number_input = <span class="purple">int</span>(<span class="purple">input</span>(<span  class="green">"Enter a number: "</span>))
+    number = number_input % <span class="blue">2</span>
+
+    <span class="orange">if</span> number == <span class="blue">0</span>:
+        <span class="purple">print</span>(<span class="green">"You have entered an even number!"</span>)
+    <span class="orange">else</span>:<br>
+        <span class="purple">print</span>(<span class="green">"You habe entered an odd number!"</span>)
+        </pre></code>
       </div>
     </main>
 
