Add Password Generator

--- a/python.html
+++ b/python.html
@@ -86,6 +86,16 @@
               <p>I've chosen a number from 1 to 100</p>
             </td>
           </tr>
+          <tr id="06-password-generator">
+            <td>
+              <img class="example-image" src="pictures/python/06-password-generator.jpg">
+            </td>
+            <td>
+              <a href="python/06-password-generator.html"><h3>Password Generator</h3></a>
+              <p class="level">Beginner</p>
+              <p>Having a strong password is very important</p>
+            </td>
+          </tr>
         </table>
       </div>
     </main>
