--- a/python/04-rock-paper-scissors.html
+++ b/python/04-rock-paper-scissors.html
@@ -30,9 +30,9 @@
     <main>
       <h4><a href="http://devExamples.cf/python.html">Python</a></h4>
       <h1>Rock-Paper-Scissors</h1>
-      <p>Create </p>
-      <p class="level">Beginner</p>
       <p>Create your own game</p>
+      <p class="level">Beginner</p>
+      <p>You can play against a virtual player - the computer. There are three rounds and at the end, there will be a winner and the possibility to play one more round.</p>
       <div class="code-1">
         <code>
           * Rock-Paper-Scissors *<br>
