Add Caesar Cipher

--- a/python.html
+++ b/python.html
@@ -96,6 +96,16 @@
               <p>Having a strong password is very important</p>
             </td>
           </tr>
+          <tr id="07-caesar-cipher">
+            <td>
+              <img class="example-image" src="pictures/python/07-caesar-cipher.jpg">
+            </td>
+            <td>
+              <a href="python/07-caesar-cipher.html"><h3>Caesar Cipher</h3></a>
+              <p class="level">Beginner</p>
+              <p>Encrypt and decrypt a text</p>
+            </td>
+          </tr>
         </table>
       </div>
     </main>
