--- a/python/06-password-generator.html
+++ b/python/06-password-generator.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"> <!-- logos and icons -->
+    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css"> <!-- logos and icons -->
 
     <!-- include nav and footer -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
