--- a/python/python-installation.html
+++ b/python/python-installation.html
@@ -7,18 +7,18 @@
     <link href="../style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href=" https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css">
 
     <!-- include nav and footer -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>
       $(function(){
-        $("#nav").load("../include/nav.html");
+        $("#nav").load("/include/nav.html");
       });
     </script>
     <script>
       $(function(){
-        $("#footer").load("../include/footer.html");
+        $("#footer").load("/include/footer.html");
       });
     </script>
   </head>
