--- a/python/06-password-generator.html
+++ b/python/06-password-generator.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href=" https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 
     <!-- include nav and footer -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -28,7 +29,7 @@
     <div id="nav"></div>
 
     <main>
-      <h4><a href="http://devExamples.cf/python.html">Python</a></h4>
+      <h4><a href="/python.html">Python</a></h4>
       <h1>Password Generator</h1>
       <p>Having a strong password is very important</p>
       <p class="level">Beginner</p>
