--- a/python/python-installation.html
+++ b/python/python-installation.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href=" https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 
     <!-- include nav and footer -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -26,7 +27,7 @@
     <div id="nav"></div>
 
     <main>
-      <h4><a href="http://devExamples.cf/python.html">Python</a></h4>
+      <h4><a href="/python.html">Python</a></h4>
       <h1>Python Installation</h1>
 
       <p>Here you can see how to install Python 3 on <a href="#linux">Linux</a>, <a href="#macos">macOS</a> or <a href="#windows">Windows</a>.<br>
