Update folder structure

--- a/python.html
+++ b/python.html
@@ -4,23 +4,19 @@
     <title>Python - devExamples</title>
     <meta charset="utf-8">
 
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="course.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/course.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href=" https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.ico?">
 
     <!-- include nav and footer -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>
-      $(function(){
-        $("#nav").load("include/nav.html");
-      });
-    </script>
-    <script>
-      $(function(){
-        $("#footer").load("include/footer.html");
+      $(function () {
+        $('#nav').load('/include/nav.html');
+        $('#footer').load('/include/footer.html');
       });
     </script>
   </head>
@@ -40,7 +36,7 @@
         <table>
           <tr id="01-welcome">
             <td>
-              <img class="example-image" src="pictures/python/01-hello-world.jpg">
+              <img class="example-image" src="/static/img/examples/python/01-hello-world.jpg">
             </td>
             <td>
               <a href="python/01-hello-world.html"><h3>Hello World</h3></a>
@@ -49,7 +45,7 @@
           </tr>
           <tr id="02-todolist">
             <td>
-              <img class="example-image" src="pictures/python/02-todolist.jpg">
+              <img class="example-image" src="/static/img/examples/python/02-todolist.jpg">
             </td>
             <td>
               <a href="python/02-todolist.html"><h3>To-Do-List</h3></a>
@@ -59,7 +55,7 @@
           </tr>
           <tr id="03-odd-or-even">
             <td>
-              <img class="example-image" src="pictures/python/03-odd-or-even.jpg">
+              <img class="example-image" src="/static/img/examples/python/03-odd-or-even.jpg">
             </td>
             <td>
               <a href="python/03-odd-or-even.html"><h3>Odd or Even</h3></a>
@@ -69,7 +65,7 @@
           </tr>
           <tr id="04-rock-paper-scissors">
             <td>
-              <img class="example-image" src="pictures/python/04-rock-paper-scissors.jpg">
+              <img class="example-image" src="/static/img/examples/python/04-rock-paper-scissors.jpg">
             </td>
             <td>
               <a href="python/04-rock-paper-scissors.html"><h3>Rock-Paper-Scissors</h3></a>
@@ -79,7 +75,7 @@
           </tr>
           <tr id="05-random-number">
             <td>
-              <img class="example-image" src="pictures/python/05-random-number.jpg">
+              <img class="example-image" src="/static/img/examples/python/05-random-number.jpg">
             </td>
             <td>
               <a href="python/05-random-number.html"><h3>Random Number</h3></a>
@@ -89,7 +85,7 @@
           </tr>
           <tr id="06-password-generator">
             <td>
-              <img class="example-image" src="pictures/python/06-password-generator.jpg">
+              <img class="example-image" src="/static/img/examples/python/06-password-generator.jpg">
             </td>
             <td>
               <a href="python/06-password-generator.html"><h3>Password Generator</h3></a>
@@ -99,7 +95,7 @@
           </tr>
           <tr id="07-caesar-cipher">
             <td>
-              <img class="example-image" src="pictures/python/07-caesar-cipher.jpg">
+              <img class="example-image" src="/static/img/examples/python/07-caesar-cipher.jpg">
             </td>
             <td>
               <a href="python/07-caesar-cipher.html"><h3>Caesar Cipher</h3></a>
