--- a/python/01-hello-world.html
+++ b/python/01-hello-world.html
@@ -15,15 +15,12 @@
     <!-- include nav and footer -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>
-      $(function(){
-        $("#nav").load("/include/nav.html");
+      $(function () {
+        $('#nav').load('/include/nav.html');
+        $('#footer').load('/include/footer.html');
       });
     </script>
-    <script>
-      $(function(){
-        $("#footer").load("/include/footer.html");
-      });
-    </script>
+    <script src="/static/js/example.js"></script>
   </head>
   <body>
     <div id="nav"></div>
@@ -42,7 +39,7 @@
         </code>
       </div>
 
-      <button name="still beta" class="view-solution">Solution</button>
+      <button class="view-solution">Solution</button>
 
       <div class="code-2">
         <code><pre>
