--- a/python/python-installation.html
+++ b/python/python-installation.html
@@ -13,13 +13,9 @@
     <!-- include nav and footer -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>
-      $(function(){
-        $("#nav").load("/include/nav.html");
-      });
-    </script>
-    <script>
-      $(function(){
-        $("#footer").load("/include/footer.html");
+      $(function () {
+        $('#nav').load('/include/nav.html');
+        $('#footer').load('/include/footer.html');
       });
     </script>
   </head>
