--- a/python/02-todolist.html
+++ b/python/02-todolist.html
@@ -26,7 +26,7 @@
     <div id="nav"></div>
 
     <main>
-      <h4><a href="/python.html">Python</a></h4>
+      <h4><a href="/python">Python</a></h4>
       <h1>To-Do-List</h1>
       <p>Create your own To-Do-List</p>
       <p class="level">Beginner</p>
