--- a/python/03-odd-or-even.html
+++ b/python/03-odd-or-even.html
@@ -26,7 +26,7 @@
     <div id="nav"></div>
 
     <main>
-      <h4><a href="/python.html">Python</a></h4>
+      <h4><a href="/python">Python</a></h4>
       <h1>Odd or Even</h1>
       <p>Is it odd or even?</p>
       <p class="level">Beginner</p>
