--- a/python/05-random-number.html
+++ b/python/05-random-number.html
@@ -26,7 +26,7 @@
     <div id="nav"></div>
 
     <main>
-      <h4><a href="/python.html">Python</a></h4>
+      <h4><a href="/python">Python</a></h4>
       <h1>Random-Number</h1>
       <p>I've chosen a number from 1 to 100</p>
       <p class="level">Beginner</p>
