--- a/python/04-rock-paper-scissors.html
+++ b/python/04-rock-paper-scissors.html
@@ -26,7 +26,7 @@
     <div id="nav"></div>
 
     <main>
-      <h4><a href="/python.html">Python</a></h4>
+      <h4><a href="/python">Python</a></h4>
       <h1>Rock-Paper-Scissors</h1>
       <p>Create your own game</p>
       <p class="level">Beginner</p>
