--- a/python/06-password-generator.html
+++ b/python/06-password-generator.html
@@ -26,7 +26,7 @@
     <div id="nav"></div>
 
     <main>
-      <h4><a href="/python.html">Python</a></h4>
+      <h4><a href="/python">Python</a></h4>
       <h1>Password Generator</h1>
       <p>Having a strong password is very important</p>
       <p class="level">Beginner</p>
