--- a/python/07-caesar-cipher.html
+++ b/python/07-caesar-cipher.html
@@ -26,7 +26,7 @@
     <div id="nav"></div>
 
     <main>
-      <h4><a href="/python.html">Python</a></h4>
+      <h4><a href="/python">Python</a></h4>
       <h1>Caesar Cipher</h1>
       <p>Encrypt and decrypt a text</p>
       <p class="level">Beginner</p>
