--- a/python/index.html
+++ b/python/index.html
@@ -27,7 +27,7 @@
       <div class="course-information">
         <h1>Python</h1>
         <p>It's a well known script-language and it's not very difficult. In this course we use Python 3.</p>
-        <a href="python/python-installation.html">Python Installation</a>
+        <a href="/python/python-installation.html">Python Installation</a>
       </div>
       <hr>
 
@@ -39,7 +39,7 @@
               <img class="example-image" src="/static/img/examples/python/01-hello-world.jpg">
             </td>
             <td>
-              <a href="python/01-hello-world.html"><h3>Hello World</h3></a>
+              <a href="/python/01-hello-world.html"><h3>Hello World</h3></a>
               <p class="level">Beginner</p>
               <p>A little script with input and output</p>
           </tr>
@@ -48,7 +48,7 @@
               <img class="example-image" src="/static/img/examples/python/02-todolist.jpg">
             </td>
             <td>
-              <a href="python/02-todolist.html"><h3>To-Do-List</h3></a>
+              <a href="/python/02-todolist.html"><h3>To-Do-List</h3></a>
               <p class="level">Beginner</p>
               <p>Create your own To-Do-List</p>
             </td>
@@ -58,7 +58,7 @@
               <img class="example-image" src="/static/img/examples/python/03-odd-or-even.jpg">
             </td>
             <td>
-              <a href="python/03-odd-or-even.html"><h3>Odd or Even</h3></a>
+              <a href="/python/03-odd-or-even.html"><h3>Odd or Even</h3></a>
               <p class="level">Beginner</p>
               <p>Is it odd or even?</p>
             </td>
@@ -68,7 +68,7 @@
               <img class="example-image" src="/static/img/examples/python/04-rock-paper-scissors.jpg">
             </td>
             <td>
-              <a href="python/04-rock-paper-scissors.html"><h3>Rock-Paper-Scissors</h3></a>
+              <a href="/python/04-rock-paper-scissors.html"><h3>Rock-Paper-Scissors</h3></a>
               <p class="level">Beginner</p>
               <p>Create your own game</p>
             </td>
@@ -78,7 +78,7 @@
               <img class="example-image" src="/static/img/examples/python/05-random-number.jpg">
             </td>
             <td>
-              <a href="python/05-random-number.html"><h3>Random Number</h3></a>
+              <a href="/python/05-random-number.html"><h3>Random Number</h3></a>
               <p class="level">Beginner</p>
               <p>I've chosen a number from 1 to 100</p>
             </td>
@@ -88,7 +88,7 @@
               <img class="example-image" src="/static/img/examples/python/06-password-generator.jpg">
             </td>
             <td>
-              <a href="python/06-password-generator.html"><h3>Password Generator</h3></a>
+              <a href="/python/06-password-generator.html"><h3>Password Generator</h3></a>
               <p class="level">Beginner</p>
               <p>Having a strong password is very important</p>
             </td>
@@ -98,7 +98,7 @@
               <img class="example-image" src="/static/img/examples/python/07-caesar-cipher.jpg">
             </td>
             <td>
-              <a href="python/07-caesar-cipher.html"><h3>Caesar Cipher</h3></a>
+              <a href="/python/07-caesar-cipher.html"><h3>Caesar Cipher</h3></a>
               <p class="level">Beginner</p>
               <p>Encrypt and decrypt a text</p>
             </td>
