--- a/python/python-installation.html
+++ b/python/python-installation.html
@@ -23,7 +23,7 @@
     <div id="nav"></div>
 
     <main>
-      <h4><a href="/python.html">Python</a></h4>
+      <h4><a href="/python">Python</a></h4>
       <h1>Python Installation</h1>
 
       <p>Here you can see how to install Python 3 on <a href="#linux">Linux</a>, <a href="#macos">macOS</a> or <a href="#windows">Windows</a>.<br>
