--- a/python/04-rock-paper-scissors.html
+++ b/python/04-rock-paper-scissors.html
@@ -4,8 +4,8 @@
     <title>Rock-Paper-Scissors - devExamples</title>
     <meta charset="utf-8">
 
-    <link href="/static/css//style.css" rel="stylesheet" type="text/css">
-    <link href="/static/css//example.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/example.css" rel="stylesheet" type="text/css">
 
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
