--- a/thehub/index.html
+++ b/thehub/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World - devExamples</title>
+    <script language="JavaScript" src="https://www.authpro.com/auth/devExamples/?action=pp">
+</script> 
+    <title>theHub - devExamples</title>
     <meta charset="utf-8">
 
     <link href="/static/css/style.css" rel="stylesheet" type="text/css">
@@ -27,8 +29,8 @@
 
     <main>
       <h4><a href="/python">Python</a></h4>
-      <h1>Hello World</h1>
-      <p>A little script with input and output</p>
+      <h1>theHub — Member Area</h1>
+      <p>Contains even more lessons. Currently a work-in-progress.</p>
       <p class="level">Beginner</p>
       <p>The script asks you for your name and your birthday. Then you get a sentence about you.</p>
       <div class="code-1">
